[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Charlie Saunders <charlieasaunders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
itertools = "0.8.2"
indoc = "0.3.4"
ordered-float = "1.0.2"
